--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,159 @@
+<!doctype html>
+<html lang="cs">
+<head>
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=6Lc1fZMjAAAAAMAcf-vnkhX-nu1tNvQeCjFjyW4V"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <title>EZnet</title>
+  <style>
+  .navbar {
+    position: fixed; /* Fiksace pozice prvku na obrazovce */
+    top: 0; /* Pozice prvku od horního okraje obrazovky */
+    left: 0; /* Pozice prvku od levého okraje obrazovky */
+    right: 0; /* Pozice prvku od pravého okraje obrazovky */
+    z-index: 999; /* Z-index určuje pořadí prvků v rámci stránky */
+  }
+  
+  #intro {
+    padding: 60px 20px 20px; /* Vnitřní okraj */
+  }
+  
+  .cookie-notice {
+    position: fixed; /* Fiksace pozice prvku na obrazovce */
+    bottom: 0; /* Pozice prvku od spodního okraje obrazovky */
+    left: 0; /* Pozice prvku od levého okraje obrazovky */
+    right: 0; /* Pozice prvku od pravého okraje obrazovky */
+    background-color: #333; /* Barva pozadí */
+    color: #fff; /* Barva textu */
+    padding: 15px; /* Vnitřní okraj */
+    text-align: center; /* Zarovnání textu na střed */
+  }
 
+  /* Styly pro tlačítko */
+  .cookie-notice button {
+    background-color: #fff; /* Barva pozadí tlačítka */
+    border: none; /* Odstranění rámečku */
+    color: #333; /* Barva textu tlačítka */
+    padding: 10px 20px; /* Vnitřní okraj */
+    cursor: pointer; /* Změna vzhledu kurzoru při najetí na tlačítko */
+  }
+ 
+ </style>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4" style:"padding-bottom: 20px;">
+  <a class="navbar-brand mx-auto" href="#">EZNET</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#intro">Úvod</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#about">O projektu</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#contact">Kontakt</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+
+
+<div class="container mt-5" id="intro" >
+  <h1 class="display-4 text-center mb-3">Popis řešení</h1>
+  <p class="lead text-center">EZnet je systém plně bezdrátové sítě pro pokrytí Vašich akcí spolehlivým internetovým připojením. Jeho hlavní výhody jsou nulová potřeba konfigurace, snadné nasazení a možnost provozu ve vnitřních i venkovních prostorách.</p>
+</div>
+
+<div class="container mt-5" id="top-image">
+  <img src="background.png" class="img-fluid" alt="Responsive image" style="height: 200px; width: 100%; display: block;">
+</div>
+
+<div class="container mt-5" id="about">
+  <h2 class="text-center mb-3">O projektu</h2>
+  <p class="text-center">EZnet vznikl jako projekt pro zjednodušení pokrývání velkých skautských festivalů Internetem. Hlavní myšlenkou byla jednoduchost a odolnost řešení, na kterých stojí i dnes. Pouze jsme přidali lepší design, moderní síťové prvky a vylepšili bezpečnost.</p>
+</div>
+
+<div class="container mt-5" id="con-image">
+  <img src="concert.png" class="img-fluid" alt="Responsive image" style="height: 200px; width: 100%; display: block;">
+</div>
+
+<div class="container mt-5" id="contact">
+  <h2 class="text-center mb-3">Kontakt</h2>
+  <form id="form">
+  <div class="form-group">
+    <label for="name">Jméno</label>
+    <input type="text" class="form-control" id="name" placeholder="Zadejte své jméno">
+  </div>
+  <div class="form-group">
+    <label for="email">E-mail</label>
+    <input type="email" class="form-control" id="email" placeholder="Zadejte svůj e-mail">
+  </div>
+  <div class="form-group">
+    <label for="message">Zpráva</label>
+    <textarea class="form-control" id="message" rows="3"></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Odeslat</button>
+</form>
+
+<script>
+document.getElementById('form').addEventListener('submit', function(event) {
+  event.preventDefault();
+	
+	var name = document.getElementById('name').value;
+    var email = document.getElementById('email').value;
+    var message = document.getElementById('message').value;
+
+    var xhr = new XMLHttpRequest();
+    xhr.open('POST', 'send.php', true);
+    xhr.setRequestHeader('Content-Type', 'application/x-www-form-urlencoded');
+    xhr.onload = function() {
+      if (xhr.status === 200) {
+        alert('Zpráva byla úspěšně odeslána!');
+      } else {
+        alert('Došlo k chybě při odesílání zprávy.');
+      }
+    };
+    xhr.send('name=' + name + '&email=' + email + '&message=' + message);
+  });
+
+
+</script>
+</div>
+
+
+  
+<div class="cookie-notice">
+  Tento web používá cookies. Kliknutím na tlačítko "Souhlasím" souhlasíte s jejich použitím.
+  <button id="accept-cookies">Souhlasím</button>
+</div>
+
+<script>
+  // Získání tlačítka
+  const acceptButton = document.querySelector("#accept-cookies");
+
+  // Při kliknutí na tlačítko se uloží hodnota "true" do local storage a upozornění se skryje
+  acceptButton.addEventListener("click", () => {
+    localStorage.setItem("cookiesAccepted", "true");
+    document.querySelector(".cookie-notice").style.display = "none";
+  });
+
+  // Pokud je hodnota "cookiesAccepted" již uložena v local storage, upozornění se skryje
+  if (localStorage.getItem("cookiesAccepted") === "true") {
+    document.querySelector(".cookie-notice").style.display = "none";
+  }
+</script>
+
+
+
+<!-- Zápatí webu -->
+<footer class="container-fluid bg-light py-3 mt-5">
+  <div class="container text-center">
+    <p>&copy; EZnet 2022, vytvořeno s pomocí chat.openai.com</p>
+  </div>
+</footer>
